name:                iota
version:             0.1.0.0
synopsis:            A programming language
description:         Please see README.md
homepage:            https://github.com/cpehle/iota#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Pehle
maintainer:          example@example.com
copyright:           2016 Christian Pehle
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Iota.Comments
                       Language.Iota.Parser
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       parsec,
                       text
  default-language:    Haskell2010

executable iota-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , iota
  default-language:    Haskell2010

test-suite iota-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , iota
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cpehle/iota
